--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,3 +624,32 @@ h2 {
 .pricing-info button:hover {
     background-color: rgb(0, 217, 255);
 }
+
+/* Testimonials Section */
+#about {
+    padding: 60px 0;
+    background: rgb(14, 8, 8);
+    color: rgb(248, 10, 248);
+    text-align: center;
+}
+
+#about h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.testimonial {
+    max-width: 700px;
+    margin: 20px auto;
+    font-size: 1.2em;
+    color: rgb(222, 103, 222);
+}
+
+.testimonial p {
+    margin: 10px 0;
+}
+
+.testimonial strong {
+    color: #08b9ff;
+}
